# erasmos

./: .gitignore  LICENSE  pyproject.toml  readme.md
erasmos/api/: main.py
erasmos/api/routes/: document.py
erasmos/cli/: main.py  utilities.py
erasmos/core/: __init__.py  config.py  meta_document.py  models.py  parser.py  tts.py  utilities.py
